--- a/iPortfolio/iPortfolio/assets/css/style.css
+++ b/iPortfolio/iPortfolio/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/dessources.jpg") top center;
+  background: url("../img/profil-2.jpg") top center;
   background-size: cover;
 }
 
@@ -626,6 +626,32 @@ section {
 .portfolio .portfolio-wrap:hover .portfolio-links {
   opacity: 1;
   bottom: 0;
+}
+.publication {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  margin: 15px 0;
+
+  align-items: center;
+  background-color: #f9f9f9;
+}
+
+.publication img {
+  max-width: 150px;
+  margin-right: 15px;
+  border-radius: 8px;
+}
+
+.publication h3 {
+  font-family: 'Arial', sans-serif;
+  font-size: 24px;
+  color: #333;
+  margin-top: 0;
+}
+
+.publication p {
+  color: #555;
 }
 
 /*--------------------------------------------------------------
